@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.confluence.custom.mod"
-  version="1.1.0"
+  version="1.1.1"
   name="Confluence Customizable Mod"
   provider-name="Mudislander">
   <requires>
@@ -47,6 +47,7 @@
     <disclaimer lang="gl">Confluence Customizable Mod [B]NON É[/B] o tema predefinido oficial do XBMC de Jezz_X.</disclaimer>
     <disclaimer lang="ko">Confluence Customizable Mod는 Jezz_X의 공식 XBMC 기본 스킨이 [B]아닙니다.[/B]</disclaimer>
     <disclaimer lang="ru">Данная модификация обложки Confluence это [B]НЕ[/B] официальная обложка XBMC авторства  Jezz_X.</disclaimer>
+    <disclaimer lang="th">Confluence Customizable Mod นี้ [B]ไม่ใช่[/B] สกินหลักอย่างเป็นทางการของ XBMC โดย Jezz_X.</disclaimer>
     <disclaimer lang="zh">Confluence定制修改版[B]不是[/B]Jezz_X制作的XBMC官方默认皮肤。</disclaimer>
     <platform>all</platform>
   </extension>
