@@ -1,3 +1,12 @@
+[B]1.1.1[/B]
+- Updated language files from Transifex
+- Added Kryptonite & Fire Themes
+- Added User Select Checkmark & Resume Icon Options
+- Added Option to Disable Page & Item Count
+- Added Extra FanArt & Artist SlideShow to Home Screen
+- Added Simple FullWall Videos View
+- Various Small BugFixes
+
 [B]1.1.0[/B]
 -Added New Defaults for Menu Background Images
 -Added Media Panel Transparency
